class parameter from its origin class in generated code. It is still
possible to specify code equations for instances of that class
parameter.

* Code generation: transitional legacy attribute [code del] is discontinued.
Minor INCOMPATIBILITY.

* Config options simp_depth_limit, simp_trace_depth_limit, simp_debug,
simp_trace now qualified in Isabelle/ML. Rare INCOMPATIBILITY.


*** Isabelle/jEdit Prover IDE ***

* The menu bar of jEdit has been adapted to the requirements of
Isabelle/jEdit, with special focus on accessibility: menus need to be
clearly structured and provide reasonable access paths, usually with
shortcuts. The following menus and items are particularly notable:

  - Utilities / Plugin Manager: moved here from Plugins menu
  - Utilities / Macros: moved here from main menu bar
  - Plugins: only lists submenus from plugins
  - Isabelle: moved here from Plugins / Isabelle
  - Options: new menu with Buffer, Global, Plugin, Isabelle Options.
  - Help: new item for Isabelle Documentation.

* The menu action "Edit / Complete word" now refers to
"isabelle.complete-words" instead of "complete-word" from classic jEdit.
Minor INCOMPATIBILITY.

* Support for additional look-and-feels: "FlatLaf IntelliJ" and "FlatLaf
Darcula".

* The FlatLaf look-and-feel has been patched slightly, to recover the
regular Java/Swing behavior of the F10 key on all platforms, notably
Windows. F10 should focus the menu bar and open the first menu, which
can be reversed via the ESCAPE. Consequently, the NVDA Screen Reader
will display the menu title on the Braille display properly ---
otherwise no action was indicated. Minor INCOMPATIBILITY with native
Windows GUI behavior of F10, which FlatLaf attempted to imitate here.

* The jEdit actions "isabelle.reload-plain" and
"isabelle.reload-symbols" provide convenient shortcuts to reload a
buffer with the encodings "UTF-8" and "UTF-8-Isabelle", respectively.
These actions also appear as menu items "File / Reload Plain Text" and