@@ -265,9 +265,9 @@ let
   fun basic_elim_tac ctxt =
       REPEAT (SOMEGOAL (eresolve_tac ctxt (Ind_Syntax.elim_rls @ Su.free_SEs)
                 ORELSE' bound_hyp_subst_tac ctxt))
-      THEN prune_params_tac ctxt
+      THEN Simplifier.prune_params_tac ctxt
           (*Mutual recursion: collapse references to Part(D,h)*)
-      THEN (PRIMITIVE (fold_rule ctxt part_rec_defs));
+      THEN (PRIMITIVE (Simplifier.fold_rule ctxt part_rec_defs));
 
   (*Elimination*)
   val (elim, thy4) = thy3
