@@ -29,6 +29,9 @@ Minor INCOMPATIBILITY.
 * Config options simp_depth_limit, simp_trace_depth_limit, simp_debug,
 simp_trace now qualified in Isabelle/ML. Rare INCOMPATIBILITY.
 
+* Functions fold_rule, fold_goals_tac, norm_hhf, norm_hhf_protect from structure
+"Simplifier" are now qualified. Rare INCOMPATIBILITY.
+
 
 *** Isabelle/jEdit Prover IDE ***
 
